--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -16,7 +16,7 @@
             {{ entry.body|apply_markup:entry.markup }}
         </div>
         <div class="entry-extra">
-            <div class="social">
+            <div class="social-buttons">
                 <!-- Place this tag where you want the +1 button to render -->
                 <g:plusone annotation="inline"></g:plusone>
 
