--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -18,7 +18,7 @@
         <div class="entry-extra">
             <div class="social-buttons">
                 <!-- Place this tag where you want the +1 button to render -->
-                <g:plusone annotation="inline"></g:plusone>
+                <g:plusone annotation="inline" size="small"></g:plusone>
 
                 <!-- Place this render call where appropriate -->
                 <script type="text/javascript">
