--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -17,10 +17,10 @@
         </div>
         <div class="entry-extra">
             <div class="social-buttons">
-                <!-- Place this tag where you want the +1 button to render -->
+                <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-via="gregnewman">Tweet</a>
+                
                 <g:plusone annotation="inline" size="small"></g:plusone>
-
-                <!-- Place this render call where appropriate -->
                 <script type="text/javascript">
                   (function() {
                     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
