--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -18,7 +18,7 @@
         <div class="entry-extra">
             <div class="social-buttons">
                 <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-via="gregnewman">Tweet</a>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-via="gregnewman" data-text="A must read:">Tweet</a>
                 
                 <g:plusone annotation="inline" size="small"></g:plusone>
                 <script type="text/javascript">
