larger and move right

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -280,6 +280,10 @@ article h2 a {
     text-align: center;
 }
 
+.social-buttons {
+    text-align: right;
+}
+
 .excerpt-img {
     float: left;
     margin-right: 20px;
