--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -20,7 +20,7 @@
                 <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
                 <a href="https://twitter.com/share" class="twitter-share-button" data-via="gregnewman" data-text="A must read:">Tweet</a>
                 
-                <g:plusone annotation="inline" size="small"></g:plusone>
+                <g:plusone annotation="inline" size="medium"></g:plusone>
                 <script type="text/javascript">
                   (function() {
                     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
