--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -164,6 +164,8 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 .divider { text-align: center; }
 
+.social-buttons { text-align: right; }
+
 .excerpt-img { float: left; margin-right: 20px; }
 
 .entry-date { font-family: neuzon-1, neuzon-2, sans-serif; font-style: normal; font-weight: 400; font-size: 11px; float: right; color: #b6764c; }
