--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -168,11 +168,11 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 .excerpt-img { float: left; margin-right: 20px; }
 
-.entry-date { font-family: neuzon-1, neuzon-2, sans-serif; font-style: normal; font-weight: 400; font-size: 11px; float: right; color: #b6764c; }
+.entry-date { font-family: abril-display-1, abril-display-2, sans-serif; font-style: normal; font-weight: 400; font-size: 11px; float: right; color: #b6764c; }
 
 .continue { display: block; text-align: right; }
 
-.comment-count { float: right; background: url(../img/icon-comment.png) no-repeat left; padding-left: 20px; font-family: neuzon-1, neuzon-2, sans-serif; font-style: normal; font-weight: 400; font-size: 11px; }
+.comment-count { float: right; background: url(../img/icon-comment.png) no-repeat left; padding-left: 20px; font-family: abril-display-1, abril-display-2, sans-serif; font-style: normal; font-weight: 400; font-size: 11px; }
 
 .entry-extra { margin: 40px 0; }
 
