--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -115,7 +115,7 @@ body {
 
 a:link,
 a:visited {
-    color: #fff;
+    color: #b6764c;
     text-decoration: none;
 }
 
@@ -299,6 +299,7 @@ article h2 a {
 .continue {
     display: block;
     text-align: right;
+    font-size: 0.9em;
 }
 
 .comment-count {
