--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -323,12 +323,8 @@ article h2 a {
 }
 
 .entry-disqus {
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    border: 8px solid #e3d2bf;
-    background: #5a4d3f;
     padding: 20px;
+    border-top: 2px solid #999;
 }
 
 .entry-disqus h2 {
