disqus comments field

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -327,6 +327,10 @@ article h2 a {
     border-top: 2px solid #999;
 }
 
+.dsq-textarea {
+    background: #e2d6c4 !important;
+}
+
 .entry-disqus h2 {
     margin: 10px 0 20px 0;
 }
