--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -182,6 +182,8 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 .entry-disqus { padding: 20px; border-top: 2px solid #999; }
 
+.dsq-textarea { background: #e2d6c4 !important; }
+
 .entry-disqus h2 { margin: 10px 0 20px 0; }
 
 /* ==|== non-semantic helper classes ======================================== */
