--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -327,7 +327,7 @@ article h2 a {
     border-top: 2px solid #999;
 }
 
-.dsq-textarea {
+.dsq-textarea .dsq-textarea-wrapper, #dsq-content .dsq-input-wrapper {
     background: #e2d6c4 !important;
 }
 
