--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -331,6 +331,10 @@ article h2 a {
     background: #e2d6c4 !important;
 }
 
+.dsq-reaction-header {
+    background: #2d2d2d !important;
+}
+
 .entry-disqus h2 {
     margin: 10px 0 20px 0;
 }
