--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 
     <!-- TODO: CHANGE THIS!! -->
     <link href="http://feeds.feedburner.com/gregnewman-combined" title="Combined Feed" rel="alternate" type="application/rss+xml" />
-    <script src="{{ STATIC_DEV }}js/modernizr-2.0.6.min.js"></script>
+    <script src="{{ STATIC_URL }}js/modernizr-2.0.6.min.js"></script>
 
     <script type="text/javascript">
 
