--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/about/">About</a></li>
                     <li><a href="/journal/">Blog</a></li> 
-                    <li><a href="/work/">Work</a></li>
+                    <li><a href="/portfolio/">Portfolio</a></li>
                     <li><a href="/contact/">Contact</a></li>
                     <li><a href="">Store</a></li>
                 </ul>
