--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -339,6 +339,11 @@ article h2 a {
     margin: 10px 0 20px 0;
 }
 
+.profile-img {
+    float: right;
+    margin: 0 0 15px 20px;
+}
+
 form {
 	margin-top: 10px;
 	position: relative;
