--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -344,6 +344,9 @@ article h2 a {
     margin: 0 0 15px 20px;
     -moz-transform:rotate(4deg);
     -webkit-transform:rotate(4deg);
+    -moz-box-shadow: 2px 2px 2px #000;
+    -webkit-box-shadow: 2px 2px 2px #000;
+    box-shadow: 2px 2px 2px #000;
 }
 
 form {
