--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                     <li><a href="/journal/">Blog</a></li> 
                     <li><a href="/portfolio/">Portfolio</a></li>
                     <li><a href="/contact/">Contact</a></li>
-                    <li><a href="">Store</a></li>
+                    <li><a href="http://shop.gregnewman.org">Store</a></li>
                 </ul>
             </div>
             <div class="clearfix"></div>
