--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -110,7 +110,15 @@ a:link, a:visited { color: #b6764c; text-decoration: none; }
 
 #container { background: url(../img/page-bg-dark.png) repeat; border-bottom: 1px solid #000; }
 
-#main, .top-banner-content, header, .footer-block { width: 705px; margin: 0 auto; position: relative; }
+#main, .top-banner-content, header, .footer-block { width: 800px; margin: 0 auto; position: relative; }
+
+header { border-bottom: 1px solid #5f4f3f; padding-bottom: 15px; margin-bottom: 25px; }
+
+aside { width: 200px; float: right; min-height: 400px; margin-top: 20px; }
+
+aside p a { color: #fff !important; }
+
+.left-content { width: 500px; float: left; }
 
 footer { height: 70px; background: #282120; border-top: 2px solid #000; padding: 15px 0; color: #b8774d; font-size: 12px; position: relative; }
 
@@ -148,11 +156,13 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 .gnewman { float: left; }
 
-.navbar ul { font-family: calluna-1, calluna-2, serif; font-style: normal; font-weight: 300; font-size: 14px; width: 500px; padding: 0; margin: 15px 0 0 0; list-style: none; float: right; text-align: right; }
+.navbar ul { font-family: calluna-1, calluna-2, serif; font-style: normal; font-weight: 300; font-size: 1.3em; width: 500px; padding: 0; margin: 15px 0 0 0; list-style: none; float: right; text-align: right; }
 
 .navbar ul li { display: inline; padding: 0 10px; }
 
 .navbar ul li a { color: #d19d64; text-decoration: none; }
+
+.navbar ul li.store-link a { color: #ccc; text-shadow: 1px 1px 1px #000000; filter: dropshadow(color=black, offx=1, offy=1); }
 
 .banners { margin: 10px 0 50px 0; height: 337px; }
 
