--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -315,8 +315,7 @@ article h2 a {
 
 .excerpt-img {
     display: block;
-    margin-right: 20px;
-    width: 500px;
+    margin: 0 auto;
 }
 
 .entry-date {
