--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -315,6 +315,7 @@ article h2 a {
 
 .excerpt-img {
     width: 300px;
+    margin-top: 4px;
     float: left;
     margin-right: 15px;
     display: block;
