--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,8 @@
     <script src="{{ STATIC_URL }}js/jquery-1.6.2.min.js"></script>
     <script src="{{ STATIC_URL }}js/modernizr-2.0.6.min.js"></script>
     <script src="{{ STATIC_URL }}js/actions.js"></script>
+    <script src="{{ STATIC_URL }}js/twitter.js"></script>
+
 
 
     <script type="text/javascript">
@@ -81,6 +83,10 @@
             <aside>
                 <a href="http://shop.gregnewman.org/product/aaron-rodgers-print"><img src="http://dl.dropbox.com/u/6062/greg-org/rodgers_framed.jpg" /></a>
                 <p><a href="http://shop.gregnewman.org/product/aaron-rodgers-print">Prints available NOW in the store</a>
+                <div id="latest_tweet">
+                <div class="loading"></div>
+            </div>
+
             </aside>
             <div class="clearfix"></div>
         </div>
