--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
             </div>
             <aside>
                 <a href="http://shop.gregnewman.org/product/aaron-rodgers-print"><img src="http://dl.dropbox.com/u/6062/greg-org/rodgers_framed.jpg" /></a>
-                <p><a href="http://shop.gregnewman.org/product/aaron-rodgers-print">Prints available NOW in the store</a>
+                <p class="storecopy"><a href="http://shop.gregnewman.org/product/aaron-rodgers-print">Prints available NOW in the store</a>
                 <div id="latest_tweet">
                 <div class="loading"></div>
             </div>
