--- a/templates/base.html
+++ b/templates/base.html
@@ -84,8 +84,17 @@
                 <a href="http://shop.gregnewman.org/product/aaron-rodgers-print"><img src="http://dl.dropbox.com/u/6062/greg-org/rodgers_framed.jpg" /></a>
                 <p class="storecopy"><a href="http://shop.gregnewman.org/product/aaron-rodgers-print">Prints available NOW in the store</a>
                 <div id="latest_tweet">
-                <div class="loading"></div>
-            </div>
+                    <div class="loading"></div>
+                </div>
+
+                <div class="respect">
+                    <h3>Respectables</h3>
+                    <ul>
+                        {% for person in people %}
+                        <li><a href="{{ person.link }}" target="_blank">{{ person.name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </div>
 
             </aside>
             <div class="clearfix"></div>
