--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
                     <h3>Respectables</h3>
                     <ul>
                         {% for person in people %}
-                        <li><a href="{{ person.link }}" target="_blank">{{ person.name }}</a></li>
+                        <li><a href="{{ person.url }}" target="_blank">{{ person.name }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
