setting up the gallery

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -524,6 +524,14 @@ button:hover {
     margin-top: 20px;
 }
 
+.portfolio-thumbs img {
+    border: 6px solid #fcfffd;
+    -moz-box-shadow: 4px 4px 4px #000;
+    -webkit-box-shadow: 4px 4px 4px #000;
+    box-shadow: 4px 4px 4px #000;
+    margin: 0 25px 25px 0;
+}
+
 
 
 
