fixing thumb layout

--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -9,7 +9,7 @@
     <h2>Gallery</h2>
     <div class="portfolio-thumbs">
         {% for work in works %}
-            <a href="{% url gallery-detail work.slug %}"><img src="{{ work.thumbnail.url }}" /></a>
+        <a href="{% url gallery-detail work.slug %}"><img src="{{ work.thumbnail.url }}" {% if forloop.counter|divisibleby:"5" %}class="thumb-last"{% endif %} /></a>
         {% endfor %}
     </div>
 {% endblock %}
