--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -240,6 +240,8 @@ button:hover { color: #fff; }
 
 .portfolio-thumbs img { border: 6px solid #fcfffd; -moz-box-shadow: 4px 4px 4px #000; -webkit-box-shadow: 4px 4px 4px #000; box-shadow: 4px 4px 4px #000; margin: 0 25px 25px 0; }
 
+.thumb-last { margin: 0 0 25px 0; }
+
 /* ==|== non-semantic helper classes ======================================== */
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
 
