--- a/templates/portfolio/detail.html
+++ b/templates/portfolio/detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base-no-aside.html" %}
 
 {% block page_title %}{{ work.title }} by Greg Newman{% endblock %}
 
