--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -242,6 +242,8 @@ button:hover { color: #fff; }
 
 .thumb-last { margin: 0 0 25px 0 !important; }
 
+.portfolio-details { margin: 20px 0; }
+
 /* ==|== non-semantic helper classes ======================================== */
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
 
