--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -538,6 +538,14 @@ button:hover {
 
 .portfolio-details {
     margin: 20px 0;
+    width: 612px;
+}
+
+.portfolio-large {
+    border: 6px solid #fcfffd;
+    -moz-box-shadow: 4px 4px 4px #000;
+    -webkit-box-shadow: 4px 4px 4px #000;
+    box-shadow: 4px 4px 4px #000;
 }
 
 
