--- a/templates/portfolio/detail.html
+++ b/templates/portfolio/detail.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <h2>Gallery: {{ work.title }}</h2>
-    <img src="{{ work.original_image.url }}" />
+    <img src="{{ work.original_image.url }}" class="portfolio-large" />
 
     <div class="portfolio-details">
         {{ work.description }}
