rudimentary home page

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -548,7 +548,11 @@ button:hover {
     box-shadow: 4px 4px 4px #000;
 }
 
-
+.about-copy {
+    font-size: 1.2em;
+    line-height: 1.5em;
+    margin: 15px 0 25px 0;
+}
 
 
 
