--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -6,6 +6,7 @@
 {% block meta_description %}Portfolio/Gallery of Greg Newman's Recent Work{% endblock %}
 
 {% block content %}
+<div class="home-banner"><img src="{{ STATIC_URL }}img/home-1.png" /></div>
     <div class="about-copy">
         <p>Greg Newman has been a freelance illustrator and devinger (designer & developer) since 2001 doing work for clients to include National Geographic, Discovery Channel and Broadway to name a few.  He currently resides in Charlotte, North Carolina with his wife, son and two dogs.  He is currently accepting new projects and can be contacted through the <a href="/contact/">contact page</a></p>
     </div>
