--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -549,9 +549,10 @@ button:hover {
 }
 
 .about-copy {
+    width: 600px;
     font-size: 1.2em;
     line-height: 1.5em;
-    margin: 15px 0 25px 0;
+    margin: 15px auto 25px auto;
 }
 
 
