--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -246,7 +246,7 @@ button:hover { color: #fff; }
 
 .portfolio-large { border: 6px solid #fcfffd; -moz-box-shadow: 4px 4px 4px #000; -webkit-box-shadow: 4px 4px 4px #000; box-shadow: 4px 4px 4px #000; }
 
-.about-copy { width: 600px; font-size: 1.2em; line-height: 1.5em; margin: 15px auto 25px auto; }
+.about-copy { width: 600px; font-size: 1.2em; line-height: 1.5em; margin: 15px auto 25px auto; text-align: center; }
 
 /* ==|== non-semantic helper classes ======================================== */
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
