--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="home-banner"><img src="{{ STATIC_URL }}img/home-1.png" /></div>
     <div class="about-copy">
-        <p>Greg Newman has been a freelance illustrator and devinger (designer & developer) since 2001 doing work for clients that include National Geographic, Discovery Channel and Broadway, to name a few.  He currently resides in Charlotte, North Carolina with his wife, son and two dogs.  He is currently accepting new projects and can be contacted through the <a href="/contact/">contact page</a></p>
+        <p>Greg Newman has been a freelance illustrator and devinger (designer & developer) since 2001 doing work for clients that include National Geographic, Discovery Channel and Broadway, to name a few.  He currently resides in Charlotte, North Carolina with his wife, son and two dogs.  Greg is accepting new projects and can be contacted through the <a href="/contact/">contact page</a>.</p>
     </div>
     <div class="portfolio-thumbs">
         {% for work in works %}
