--- a/templates/portfolio/detail.html
+++ b/templates/portfolio/detail.html
@@ -26,7 +26,7 @@
         </div>
         {% if work.buy_link %}
         <div class="portfolio-purchase">
-            <a href="{{ work.buy_link }}">Purchase A Print</a>
+            <a href="{{ work.buy_link }}">Purchase Prints</a>
         </div>
         {% endif %}
     </aside>
