--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -524,6 +524,10 @@ button:hover {
     margin-top: 20px;
 }
 
+.portfolio-thumbs {
+    text-align: center;
+}
+
 .portfolio-thumbs img {
     border: 6px solid #fcfffd;
     -moz-box-shadow: 4px 4px 4px #000;
