--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -238,6 +238,8 @@ button:hover { color: #fff; }
 
 #latest_tweet { margin-top: 20px; }
 
+.portfolio-thumbs { text-align: center; }
+
 .portfolio-thumbs img { border: 6px solid #fcfffd; -moz-box-shadow: 4px 4px 4px #000; -webkit-box-shadow: 4px 4px 4px #000; box-shadow: 4px 4px 4px #000; margin: 0 25px 25px 0; }
 
 .thumb-last { margin: 0 0 25px 0 !important; }
