--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -248,7 +248,7 @@ button:hover { color: #fff; }
 
 .portfolio-large { border: 6px solid #fcfffd; -moz-box-shadow: 4px 4px 4px #000; -webkit-box-shadow: 4px 4px 4px #000; box-shadow: 4px 4px 4px #000; }
 
-.about-copy { width: 600px; font-size: 1.2em; line-height: 1.5em; margin: 15px auto 25px auto; text-align: center; }
+.about-copy { width: 600px; font-size: 1.2em; line-height: 1.5em; margin: 30px auto; text-align: center; }
 
 .portfolio-body aside { width: 170px; float: left; margin-left: 30px; }
 
