--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -580,7 +580,21 @@ button:hover {
 }
 
 .portfolio-purchase a {
-    font-size: 1.2em;
+    font-size: 1.1em;
+    background: #000;
+    border: 0;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+    padding: 6px 10px;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    color: #fff;
+    font-weight: bold;
+}
+
+.portfolio-purchase a:hover {
+    color: #b9956d;
 }
 
 
