--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -555,7 +555,7 @@ button:hover {
     width: 600px;
     font-size: 1.2em;
     line-height: 1.5em;
-    margin: 30px auto;
+    margin: 30px auto 50px auto;
     text-align: center;
 }
 
