--- a/templates/portfolio/detail.html
+++ b/templates/portfolio/detail.html
@@ -28,6 +28,21 @@
         <div class="portfolio-purchase">
             <a href="{{ work.buy_link }}">Purchase Prints</a>
         </div>
+        <div class="portfolio-social">
+            <div class="social-buttons">
+                <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-via="gregnewman" data-text="A must see:">Tweet</a>
+                
+                <g:plusone size="medium" annotation="none"></g:plusone>
+                <script type="text/javascript">
+                  (function() {
+                    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                    po.src = 'https://apis.google.com/js/plusone.js';
+                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+                  })();
+                </script>
+            </div>
+        </div>
         {% endif %}
     </aside>
     <div class="clearfix"></div>
