--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -262,6 +262,8 @@ button:hover { color: #fff; }
 
 .portfolio-purchase a:hover { color: #b9956d; }
 
+.portfolio-social { margin-top: 20px; }
+
 /* ==|== non-semantic helper classes ======================================== */
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
 
