oops. Rogie is broken

--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
             <div class="footer-block">
                 <img src="{{ STATIC_URL }}img/skull.png" class="skull" />
                 &copy;2010 Greg Newman, All Rights Reserved.<br />Content, site design, images and illustrations may not be reproduced without written permission from Greg.<br />
-                Social icons by the legendary taxidermist, <a href="">Rogie King</a>.
+                Social icons by the legendary taxidermist, <a href="http://rogieking.com">Rogie King</a>.
             </div>
         </footer>
     </div> <!--! end of #container -->
