--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
     <div id="container">
         <div class="top-banner">
             <div class="top-banner-content">
-                <span class="title">Illustrator ~ Artist ~ Devinger</span>
+                <span class="title">Illustrator ~ Artist ~ Devigner</span>
                 <div class="social">
                     <span class="twitter"><a href="http://twitter.com/gregnewman"></a></span>
                     <span class="dribbble"><a href="http://dribbble.com/newman"></a></span>
