--- a/templates/base-no-aside.html
+++ b/templates/base-no-aside.html
@@ -47,7 +47,7 @@
     <div id="container">
         <div class="top-banner">
             <div class="top-banner-content">
-                <span class="title">Illustrator ~ Artist ~ Devinger</span>
+                <span class="title">Illustrator ~ Artist ~ Devigner</span>
                 <div class="social">
                     <span class="twitter"><a href="http://twitter.com/gregnewman"></a></span>
                     <span class="dribbble"><a href="http://dribbble.com/newman"></a></span>
