--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,12 @@
                 {% block content %}{% endblock %}
             </div>
             <aside>
+                <div class="newsletter-link">
+                    <!-- // MAILCHIMP SUBSCRIBE CODE \\ -->
+                    <a href="http://eepurl.com/jy1OP">Subscribe to the newsletter!</a>
+                    <!-- \\ MAILCHIMP SUBSCRIBE LINK // -->
+                </div>
+                
                 <a href="http://shop.gregnewman.org/product/aaron-rodgers-print"><img src="http://dl.dropbox.com/u/6062/greg-org/rodgers_framed.jpg" /></a>
                 <p class="storecopy"><a href="http://shop.gregnewman.org/product/aaron-rodgers-print">Prints available NOW in the store</a>
                 <div id="latest_tweet">
