--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -264,6 +264,8 @@ button:hover { color: #fff; }
 
 .portfolio-social { margin-top: 20px; }
 
+.newsletter-link a { -moz-border-radius: 5px; -webkit-border-radius: 5px; background: #bb966e; margin: 0 0 30px 0; padding: 4px 10px; color: #fff; display: block; text-align: center; text-shadow: 1px 1px 1px #000000; font-family: Helvetica, Arial, sans-serif; font-weight: bold; font-size: 1em; filter: dropshadow(color=black, offx=1, offy=1); line-height: auto; }
+
 /* ==|== non-semantic helper classes ======================================== */
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
 
