--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                 <div class="social">
                     <span class="twitter"><a href="http://twitter.com/gregnewman"></a></span>
                     <span class="dribbble"><a href="http://dribbble.com/newman"></a></span>
-                    <span class="facebook"><a href="http://facebook.com/newman.greg"></a></span>
+                    <span class="facebook"><a href="https://www.facebook.com/NewmanStudiosFineArt"></a></span>
                     <span class="flickr"><a href="http://www.flickr.com/photos/busyashell/"></a></span>
                     <span class="behance"><a href="http://www.behance.net/gregnewman"></a></span>
                 </div>
