--- a/templates/base-no-aside.html
+++ b/templates/base-no-aside.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Greg Newman: Illustrator, Designer, Hacker</title>
+    <title>{% block page_title %}{% endblock %}</title>
     <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
 
     <meta name="description" content="Greg Newman is an artist, illustrator, designer and python developer located in Charlotte, NC.  Specializing in portrait, wildlife and caricature illustrations and paintings. {% block meta_description %}{% endblock %}">
