--- a/templates/base-no-aside.html
+++ b/templates/base-no-aside.html
@@ -8,7 +8,7 @@
     <title>{% block page_title %}{% endblock %}</title>
     <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
 
-    <meta name="description" content="Greg Newman is an artist, illustrator, designer and python developer located in Charlotte, NC.  Specializing in portrait, wildlife and caricature illustrations and paintings. {% block meta_description %}{% endblock %}">
+    <meta name="description" content="{% block meta_description %}{% endblock %}Greg Newman is an artist, illustrator, designer and python developer located in Charlotte, NC.  Specializing in portrait, wildlife and caricature illustrations and paintings.">
     <meta name="author" content="Greg Newman">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
