new meta title for blog entry

--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -3,7 +3,7 @@
 {% load tagging_tags %}
 {% load disqus_tags %}
 
-{% block page_title %}{{ entry.title }} by Greg Newman{% endblock %}
+{% block page_title %}{{ entry.meta_title }} by Greg Newman{% endblock %}
 
 {% block meta_keywords %}{{ entry.keywords }}{% endblock %}
 {% block meta_description %}{{ entry.description }}{% endblock %}
