--- a/templates/portfolio/detail.html
+++ b/templates/portfolio/detail.html
@@ -1,6 +1,6 @@
 {% extends "base-no-aside.html" %}
 
-{% block page_title %}{{ work.meta_title }} by Greg Newman{% endblock %}
+{% block page_title %}{{ work.meta_title }}{% endblock %}
 
 {% block meta_keywords %}{{ work.keywords }}{% endblock %}
 {% block meta_description %}{{ work.description }}{% endblock %}
