--- a/templates/portfolio/detail.html
+++ b/templates/portfolio/detail.html
@@ -13,7 +13,7 @@
 
         <h2>Related Work</h2>
         <div class="portfolio-thumbs">
-            {% for work in works %}
+            {% for work in work.related_content.all %}
             <a href="{% url gallery-detail work.slug %}"><img src="{{ work.thumbnail.url }}" {% if forloop.counter|divisibleby:"5" %}class="thumb-last"{% endif %} /></a>
             {% endfor %}
         </div>
