--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -532,6 +532,10 @@ button:hover {
     text-align: center;
 }
 
+.related-thumbs {
+    text-align: left !important;
+}
+
 .portfolio-thumbs img {
     border: 6px solid #fcfffd;
     -moz-box-shadow: 4px 4px 4px #000;
