--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -240,6 +240,8 @@ button:hover { color: #fff; }
 
 .portfolio-thumbs { text-align: center; }
 
+.related-thumbs { text-align: left !important; }
+
 .portfolio-thumbs img { border: 6px solid #fcfffd; -moz-box-shadow: 4px 4px 4px #000; -webkit-box-shadow: 4px 4px 4px #000; box-shadow: 4px 4px 4px #000; margin: 0 25px 25px 0; }
 
 .thumb-last { margin: 0 0 25px 0 !important; }
