--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -589,7 +589,7 @@ button:hover {
 
 .portfolio-purchase a {
     font-size: 1.1em;
-    background: #000;
+    background: #35a617;
     border: 0;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
