--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -260,7 +260,7 @@ button:hover { color: #fff; }
 
 .portfolio-purchase { margin-top: 25px; }
 
-.portfolio-purchase a { font-size: 1.1em; background: #000; border: 0; -moz-border-radius: 5px; -webkit-border-radius: 5px; padding: 6px 10px; outline: 0; border: 0; cursor: pointer; color: #fff; font-weight: bold; }
+.portfolio-purchase a { font-size: 1.1em; background: #35a617; border: 0; -moz-border-radius: 5px; -webkit-border-radius: 5px; padding: 6px 10px; outline: 0; border: 0; cursor: pointer; color: #fff; font-weight: bold; }
 
 .portfolio-purchase a:hover { color: #b9956d; }
 
