--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -2,13 +2,13 @@
 
 {% block page_title %}Portfolio/Gallery of Greg Newman's Recent Work{% endblock %}
 
-{% block meta_keywords %}gallery, portfolio, greg newman, illustration, art, paintings, wildlife, sports, portraits, caricatures, sketches, drawings{% endblock %}
+{% block meta_keywords %}gallery, portfolio, greg newman, illustration, art, paintings, wildlife, motorcycles, harley davidson, sports, portraits, , sketches, drawings{% endblock %}
 {% block meta_description %}Portfolio/Gallery of Greg Newman's Recent Work{% endblock %}
 
 {% block content %}
 <div class="home-banner"><img src="{{ STATIC_URL }}img/home-1.png" /></div>
     <div class="about-copy">
-        <p>Greg Newman has been a freelance illustrator and devinger (designer & developer) since 2001 doing work for clients that include National Geographic, Discovery Channel and Broadway, to name a few.  He currently resides in Charlotte, North Carolina with his wife, son and two dogs.  Greg is accepting new projects and can be contacted through the <a href="/contact/">contact page</a>.</p>
+        <p>Greg Newman has been a freelance Illustrator/Artist specializing in portrait, wildlife and technical paintings and illustrations.  Greg also works as a devinger (designer & developer) since 2001 doing work for clients that include National Geographic, Discovery Channel and Broadway, to name a few.  Greg currently resides in Charlotte, North Carolina with his wife, son and two dogs.  Greg is accepting new projects and can be contacted through the <a href="/contact/">contact page</a>.</p>
     </div>
     <div class="portfolio-thumbs">
         {% for work in works %}
