--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -1,9 +1,9 @@
 {% extends "base-no-aside.html" %}
 
-{% block page_title %}Portfolio/Gallery of Greg Newman's Recent Work{% endblock %}
+{% block page_title %}Website of Greg Newman, Illustrator and Artist{% endblock %}
 
 {% block meta_keywords %}gallery, portfolio, greg newman, illustration, art, paintings, wildlife, motorcycles, harley davidson, sports, portraits, , sketches, drawings{% endblock %}
-{% block meta_description %}Portfolio/Gallery of Greg Newman's Recent Work{% endblock %}
+{% block meta_description %}Greg Newman's recent illustration, store and blog.  Wildlife, portrait and motorcycle paintings.{% endblock %}
 
 {% block content %}
 <div class="home-banner"><img src="{{ STATIC_URL }}img/home-1.png" /></div>
