--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -1,9 +1,9 @@
 {% extends "base-no-aside.html" %}
 
-{% block page_title %}Portfolio/Gallery of Greg Newman's Recent Work{% endblock %}
+{% block page_title %}Portfolio of Greg Newman's Recent Work{% endblock %}
 
-{% block meta_keywords %}gallery, portfolio, greg newman, illustration, art, paintings, wildlife, sports, portraits, caricatures, sketches, drawings{% endblock %}
-{% block meta_description %}Portfolio/Gallery of Greg Newman's Recent Work{% endblock %}
+{% block meta_keywords %}gallery, portfolio, greg newman, illustration, art, paintings, wildlife, sports, portraits, caricatures, sketches, drawings, motorcycle art, motorcycles, harley davidson{% endblock %}
+{% block meta_description %}Portfolio of Greg Newman's illustration work.  Wildlife, portrait and motorcycle paintings.{% endblock %}
 
 {% block content %}
     <h2>Gallery</h2>
