--- a/templates/blog/home_page.html
+++ b/templates/blog/home_page.html
@@ -5,6 +5,12 @@
 {% load comparison %}
 {% load disqus_tags %}
 
+{% block page_title %}Blog of Greg Newman's Recent Work and thoughts{% endblock %}
+
+{% block meta_keywords %}blog, journal, gallery, portfolio, greg newman, illustration, art, paintings, wildlife, sports, portraits, caricatures, sketches, drawings, motorcycle art, motorcycles, harley davidson{% endblock %}
+{% block meta_description %}Blog of Greg Newman's illustration work, sketches and thoughts.  Wildlife, portrait and motorcycle paintings.{% endblock %}
+
+
 {% block content %}
     {% if entries %}
         {% for entry in entries %}
