--- a/templates/contact_form/contact_form.html
+++ b/templates/contact_form/contact_form.html
@@ -2,7 +2,7 @@
 
 {% block page_title %}Contact Greg Newman, the artist, illustrator and developer{% endblock %}
 
-{% block meta_keywords %}contact greg newman, illustration, illustrator, artist, designer, django, art, motorcycle, harley, harley art, painting, painter12, photoshop, watercolor, oil paint, drawing, sketching{% endblock %}
+{% block meta_keywords %}Contact greg newman, illustration, illustrator, artist, designer, django, art, motorcycle, harley, harley art, painting, painter12, photoshop, watercolor, oil paint, drawing, sketching{% endblock %}
 
 {% block meta_description %}
     Contact Greg Newman, the freelance illustrator specializing in motorcycle, harley davidson, portrait, and wildlife illustrations; as well as design, and development for the intertubes.
