--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -2,7 +2,7 @@
 
 {% block page_title %}About Greg Newman, the artist, illustrator and developer{% endblock %}
 
-{% block meta_keywords %}illustration, illustrator, artist, designer, django, art, motorcycle, harley, harley art, painting, painter12, photoshop, watercolor, oil paint, drawing, sketching{% endblock %}
+{% block meta_keywords %}about greg, greg newman, greg, newman, illustration, illustrator, artist, designer, django, art, motorcycle, harley, harley art, painting, painter12, photoshop, watercolor, oil paint, drawing, sketching{% endblock %}
 
 {% block meta_description %}
     About Greg Newman is a freelance illustrator specializing in motorcycle, harley davidson, portrait, and wildlife illustrations; as well as design, and development for the intertubes.
