--- a/templates/portfolio/detail.html
+++ b/templates/portfolio/detail.html
@@ -2,8 +2,8 @@
 
 {% block page_title %}{{ work.meta_title }}{% endblock %}
 
-{% block meta_keywords %}{{ work.keywords }}{% endblock %}
-{% block meta_description %}{{ work.description }}{% endblock %}
+{% block meta_keywords %}{{ work.meta_keywords }}{% endblock %}
+{% block meta_description %}{{ work.meta_description }}{% endblock %}
 
 {% block body-class %}portfolio-body{% endblock %}
 {% block content %}
