styles for commissions view

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -626,6 +626,18 @@ button:hover {
     line-height: auto;
 }
 
+.commissions h3 {
+    font-size: 1.3em;
+    color: #fff;
+}
+
+.commissions a {
+    text-decoration: underline;
+}
+
+.commissions ul li {
+    margin: 10px 0;
+}
 
 
 
