--- a/templates/base-no-aside.html
+++ b/templates/base-no-aside.html
@@ -66,6 +66,7 @@
                     <li><a href="/about/">About</a></li>
                     <li><a href="/journal/">Blog</a></li> 
                     <li><a href="/portfolio/">Gallery</a></li>
+                    <li><a href="/commissions/">Commissions</a></li>
                     <li><a href="/contact/">Contact</a></li>
                     <li class="store-link"><a href="http://shop.gregnewman.org">Store</a></li>
                 </ul>
